--- a/package.json
+++ b/package.json
@@ -82,12 +82,14 @@
     "js-file-download": "^0.4.12",
     "md5": "^2.3.0",
     "mdb-react-ui-kit": "^2.0.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-validation": "^0.1.11",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.12.0",
