--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-validation": "^0.1.11",
-    "react-datepicker": "^4.6.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.12.0",
@@ -104,6 +104,7 @@
     "react-transition-group": "^4.4.2",
     "reactstrap": "^8.10.0",
     "recompose": "^0.30.0",
+    "sass": "^1.49.9",
     "styled-components": "^5.3.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
